исправил неточности